# easy-worktree-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_ja.md  install.sh
.github/workflows/: ci.yml  release.yml
.rulesync/rules/: overview.md
skills/easy-worktree/: SKILL.md
src/: lib.rs  main.rs
tests/: integration.rs
